--- a/.github/workflows/orcl.yaml
+++ b/.github/workflows/orcl.yaml
@@ -1,50 +1,48 @@
-name: Stok Veri Analizi İş Akışı
+name: stock
 
 on:
   push:
-    branches: [ main ]  # Bu iş akışı, 'main' dalına yapılan push işlemlerinde tetiklenecek.
+    branches: [ main ] 
 
 jobs:
   veri_analizi:
-    runs-on: ubuntu-latest  # Bu iş, en güncel Ubuntu sanal makinesi üzerinde çalışacak.
+    runs-on: ubuntu-latest 
 
     steps:
-    - name: Repoyu Çek
-      uses: actions/checkout@v2  # GitHub reposundaki kodları çeker.
-
-    - name: Python Kurulumu
+    - name: 
+      uses: actions/checkout@v2 
+    - name: Python kur
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'  # Python'un 3.x sürümünü kurar.
+        python-version: '3.x'  
 
-    - name: Mevcut Dizindeki Dosyaları Listele
-      run: ls -l  # Mevcut dizindeki dosyaları listeler.
+    - name: 
+      run: ls -l  
 
-    - name: CSV Dosyasını Kontrol Et
+    - name: CSV test
       run: |
         if [ ! -f orcl.csv ]; then
           echo "orcl.csv dosyası bulunamadı!"
           exit 1
         fi
 
-    - name: Script'i Çalıştır
+    - name: Script
       run: |
         python main.py  # 'main.py' betiğini çalıştırır.
         if [ ! -f orcl-sma.csv ] || [ ! -f orcl-rsi.csv ]; then
-          echo "Çıktı dosyaları oluşturulamadı!"
-          exit 1
+         
         fi
 
-    - name: SMA Sonuçlarını Yükle
+    - name: SMA 
       uses: actions/upload-artifact@v2
       if: success()
       with:
-        name: sma-sonuclari
-        path: orcl-sma.csv  # 'orcl-sma.csv' dosyasını bir sanat eseri olarak yükler.
+        name: sma
+        path: orcl-sma.csv  
 
-    - name: RSI Sonuçlarını Yükle
+    - name: RSI 
       uses: actions/upload-artifact@v2
       if: success()
       with:
-        name: rsi-sonuclari
-        path: orcl-rsi.csv  # 'orcl-rsi.csv' dosyasını bir sanat eseri olarak yükler.
+        name: rsi
+        path: orcl-rsi.csv  
