--- a/.github/workflows/orclwrkflw.yml
+++ b/.github/workflows/orclwrkflw.yml
@@ -1,27 +1,27 @@
-name: Stok Veri Analizi İş Akışı
+name: stock data 
 
 on:
   push:
-    branches: [ main ]  # Bu iş akışı, 'main' dalına yapılan push işlemlerinde tetiklenecek.
+    branches: [ main ]
 
 jobs:
   veri_analizi:
-    # ... önceki adımlar ...
+    
 
-    - name: Mevcut Dizindeki Dosyaları Listele
+    - name: list file
       run: ls -l
 
-    - name: Script'i Çalıştır
-      run: python main.py  # 'main.py' betiğini çalıştırır.
+    - name: Script
+      run: python main.py  
 
-    - name: SMA Sonuçlarını Yükle
+    - name: SMA 
       uses: actions/upload-artifact@v2
       with:
-        name: sma-sonuclari
-        path: orcl-sma.csv  # 'orcl-sma.csv' dosyasını bir sanat eseri olarak yükler.
+        name: sma
+        path: orcl-sma.csv 
 
-    - name: RSI Sonuçlarını Yükle
+    - name: RSI 
       uses: actions/upload-artifact@v2
       with:
-        name: rsi-sonuclari
-        path: orcl-rsi.csv  # 'orcl-rsi.csv' dosyasını bir sanat eseri olarak yükler.
+        name: rsi
+        path: orcl-rsi.csv  
