--- a/.github/workflows/orcl.yaml
+++ b/.github/workflows/orcl.yaml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Script
       run: |
-        python main.py  # 'main.py' betiğini çalıştırır.
+        python main.py 
         if [ ! -f orcl-sma.csv ] || [ ! -f orcl-rsi.csv ]; then
          
         fi
